--- a/styl.css
+++ b/styl.css
@@ -134,25 +134,20 @@ body{
 }
 
 .uvod p{
-    margin: 5px;
+    margin: 5%;
     font-size: 20px;
     text-align:left;
     
     
 }
 
-/* .obrazek1{
-    padding: 20px 5px 0px 20px;
-    margin-right: 5px;
-
-} */
 
 .obrazek1 img{
     float: left;
     width: 50%;
     height: 50%;
     border-radius: 25px;
-    margin: 5px;
+    margin: 5%;
 }
 
 
@@ -162,6 +157,12 @@ body{
     border-radius: 25px;
     padding: 5px;
     margin-top: 15px;
+
+    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 1s; /* Firefox < 16 */
+        -ms-animation: fadein 1s; /* Internet Explorer */
+         -o-animation: fadein 1s; /* Opera < 12.1 */
+            animation: fadein 1s;
 }
 
 .adresa h2{
@@ -179,15 +180,6 @@ body{
     margin-left: 15px;
 }
 
-.adresa table{
-    margin: 5px 10px 10px 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.adresa table td{
-    padding: 2px 10px;
-}
-
 .mapa iframe{
     border-radius: 20px;
     max-width: 100%;
@@ -199,6 +191,47 @@ body{
     margin: 20px;
 
 }
+
+.oteviraci{
+    background-color:rgba(255, 255, 255, 0.8) ;
+    backdrop-filter:saturate(180%) blur(20px);
+    border-radius: 25px;
+    padding: 5px;
+    margin-top: 15px;
+
+    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 1s; /* Firefox < 16 */
+        -ms-animation: fadein 1s; /* Internet Explorer */
+         -o-animation: fadein 1s; /* Opera < 12.1 */
+            animation: fadein 1s;
+}
+
+.oteviraci h2{
+    padding-top: 5px;
+    margin: 10px 25px 0px 5px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.oteviraci p{
+    margin-left: auto;
+    margin-right: auto;
+    margin: 10px;
+    margin-left: 15px;
+}
+
+
+
+.oteviraci table{
+    margin: 5px 10px 10px 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.oteviraci table td{
+    padding: 2px 10px;
+}
+
 
 
 
