--- a/styl.css
+++ b/styl.css
@@ -315,7 +315,7 @@ body{
     }
 
     .uvod{
-        margin: 30px;
+        margin: 30px 30px 0 30px;
     }
 
     .adresa{
@@ -327,6 +327,8 @@ body{
         display: flex;
         padding-left: auto;
         padding-right: auto;
+        padding: 0;
+        height: 425px;
     }
 
 
@@ -353,13 +355,13 @@ body{
     .oteviraci img{
         height: 180px;
         width: 270px;
-        margin: 20px;
+        margin: 15px;
         margin-top: auto;
         margin-bottom: auto;
     }
 
     .tabulka{
-        margin: 20px;
+        margin: 15px;
         margin-top: auto;
         margin-bottom: auto;
     }
