--- a/styl.css
+++ b/styl.css
@@ -329,11 +329,15 @@ body{
         margin: 30px;
     }
 
+    .poloha{
+        margin: 20px 30px 20px 30px;
+    }
+
     .oteviraci{
-        margin: 30px 30px 20px 30px;
+        justify-content: center;
+
         display: flex;
-        padding-left: auto;
-        padding-right: auto;
+        margin: auto;
     }
 
 
@@ -397,7 +401,7 @@ body{
     
     .oteviraci{
         padding:0;
-        height: 425px;
+        height: 415px;
         width: 615px;
     }
     
