--- a/styl.css
+++ b/styl.css
@@ -124,14 +124,17 @@ body{
     border-radius: 25px;
     backdrop-filter:saturate(180%) blur(20px);
     padding-bottom: 8px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.uvod{
+.pole{
     background-color:rgba(255, 255, 255, 0.8) ;
     backdrop-filter:saturate(180%) blur(20px);
     border-radius: 25px;
     display: inline-block;
-    margin: 8px;
+    margin: 2%;
+    width: 100%;
 
     -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein 1s; /* Firefox < 16 */
@@ -140,13 +143,19 @@ body{
             animation: fadein 1s;
 }
 
-.uvod p{
+.pole p{
     margin: 5%;
     font-size: 20px;
     text-align:left;
-    
-    
 }
+
+.pole iframe{
+    border-radius: 25px;
+    margin: 20px;
+    min-height: 300px;
+    max-width: 555px;
+}
+
 
 
 .obrazek1 img{
@@ -158,23 +167,12 @@ body{
 
 
 .adresa{
-    background-color:rgba(255, 255, 255, 0.8) ;
-    backdrop-filter:saturate(180%) blur(20px);
-    border-radius: 25px;
-    padding: 5px;
-    margin-top: 15px;
-    margin: 8px;
-
-    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 1s; /* Firefox < 16 */
-        -ms-animation: fadein 1s; /* Internet Explorer */
-         -o-animation: fadein 1s; /* Opera < 12.1 */
-            animation: fadein 1s;
+    padding: 0;
+    margin: 0;
 }
 
 .adresa h2{
     padding-top: 5px;
-    margin: 10px 25px 0px 5px;
     margin-left: auto;
     margin-right: auto;
 
@@ -183,6 +181,7 @@ body{
 .adresa p{
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
     margin: 10px;
     margin-left: 15px;
 }
@@ -195,26 +194,17 @@ body{
 
 .mapa{
     text-align: center;
-    margin: 20px;
 
 }
 
 .oteviraci{
-    background-color:rgba(255, 255, 255, 0.8) ;
-    backdrop-filter:saturate(180%) blur(20px);
-    border-radius: 25px;
-    padding: 5px;
-    margin: 15px 8px 8px 8px;
-
-    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 1s; /* Firefox < 16 */
-        -ms-animation: fadein 1s; /* Internet Explorer */
-         -o-animation: fadein 1s; /* Opera < 12.1 */
-            animation: fadein 1s;
+    padding: 0;
+    margin: 0;
+    margin: auto;
+    
 }
 
 .oteviraci img{
-    display: hidden;
     max-width: 270px;
     border-radius: 25px;
     padding-top: 10px;
@@ -246,9 +236,6 @@ body{
     padding: 2px 10px;
 }
 
-
-
-
 .footer{
     text-align: center;
     background-color: rgba(207, 207, 207, 0.801);
@@ -259,7 +246,6 @@ body{
     margin-left: auto;
     margin-right: auto; 
 }
-
 
 
 
@@ -288,27 +274,6 @@ body{
 }
 
 
-/* O nas */
-
-.pole1{
-    background-color:rgba(255, 255, 255, 0.8) ;
-    backdrop-filter:saturate(180%) blur(20px);
-    border-radius: 25px;
-    display: inline-block;
-    margin: 8px;
-
-    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 1s; /* Firefox < 16 */
-        -ms-animation: fadein 1s; /* Internet Explorer */
-         -o-animation: fadein 1s; /* Opera < 12.1 */
-            animation: fadein 1s;
-}
-
-.pole1 p{
-    margin: 5%;
-    font-size: 20px;
-    text-align:left;
-}
 
 
 
@@ -330,7 +295,7 @@ body{
     }
 
     .hlavni_proklik li a{
-        margin: auto 35% auto 35%;
+        margin: auto 24% auto 24%;
 
     }
 
@@ -347,28 +312,7 @@ body{
         margin: 20px;
     }
 
-    .uvod{
-        margin: 30px 30px 0 30px;
-    }
-
-    .adresa{
-        margin: 30px;
-    }
-
-    .poloha{
-        margin: 20px 30px 20px 30px;
-    }
-
-    .oteviraci{
-        justify-content: center;
-        display: flex;
-        margin: auto;
-    }
-
-
-    .uvod p{
-        margin: 20px;
-    }
+    
 
     body{
         margin: 20px;
@@ -384,10 +328,9 @@ body{
         max-width: 1350px;
     }
 
-    .oteviraci img{
-        height: 180px;
-        width: 270px;
-        margin: 15px 15px 30px 30px;
+
+
+    .oteviraci{
         margin-top: auto;
         margin-bottom: auto;
     }
@@ -398,18 +341,50 @@ body{
         margin-bottom: auto;
     }
 
-    /* O nas */
-    .pole1{
-        margin: 30px 30px 0 30px;
-    }
-
-    .pole1 p{
-        margin: 20px;
+    .oteviraci{
+        justify-content: center;
+        display: flex;
+        margin: auto;
     }
     
+    .oteviraci img{
+        height: 180px;
+        width: 270px;
+        margin: 15px 15px 30px 30px;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
 }
 
-@media screen and (min-width:930px) {
+@media screen and (min-width:735px){
+}
+
+
+@media screen and (min-width:930px){
+    .pole{
+        width: 48%;
+        margin: 1%;
+    }
+
+    .oteviraci{
+        justify-content: center;
+        display:inline;
+        margin: auto;
+    }
+    
+    .oteviraci img{
+        height: 180px;
+        width: 270px;
+        margin: 15px 15px 30px 30px;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
+
+}
+
+@media screen and (min-width:1045px) {
     .hlavni_proklik ul{
         padding: 10px;
     }
@@ -423,47 +398,4 @@ body{
         margin: 5px;
     }
 
-}
-
-
-@media screen and (min-width:1400px) {
-    .adresa{
-        width: 615px;
-        padding: 0;
-    }
-    
-    .oteviraci{
-        padding:0;
-        height: 415px;
-        width: 615px;
-    }
-    
-    .lokace{
-        display: flex;
-        flex-wrap: wrap;
-        margin: 0;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .oteviraci img{
-        height: 180px;
-        width: 270px;
-        margin: 20px;
-        margin-top: auto;
-        margin-bottom: auto;
-    }
-
-    .tabulka{
-        margin: 20px;
-        margin-top: auto;
-        margin-bottom: auto;
-    }
-
-    /* O nas */
-    .pole1{
-        padding:0;
-        height: 415px;
-        width: 615px;
-    }
 }
