--- a/styl.css
+++ b/styl.css
@@ -132,7 +132,7 @@ strong{
 }
 
 .pole{
-    background-color:rgba(255, 255, 255, 0.8) ;
+    background-color:rgba(255, 255, 255, 0.8);
     backdrop-filter:saturate(180%) blur(20px);
     border-radius: 25px;
     display: inline-block;
@@ -157,6 +157,8 @@ strong{
     min-height: 300px;
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -193,13 +195,18 @@ strong{
     border-radius: 20px;
     max-width: 100%;
     max-height: 300px;
+    border-radius: 0 0 25px 25px;
+    margin: 0;
+    padding: 0;
 }
 
 .mapa{
     text-align: center;
+    padding: 0;
+    margin: 0;
+    height: 100%;
 
 }
-
 .oteviraci{
     padding: 0;
     margin: 0;
@@ -238,6 +245,33 @@ strong{
     padding: 2px 10px;
 }
 
+/* Limitovaná edice */
+#obrazek1{
+    float: left;
+    width: 50%;
+    border-radius: 25px 0px 25px 0px;
+    margin:0px 5% 0px 0px;
+}
+
+@media screen and (min-width:570px){
+    #obrazek1{
+        margin: 0px 20px 0px 0px;
+        border-radius: 25px 0px 0px 25px;
+    }
+
+}
+
+@media screen and (min-width:650px){
+    #obrazek1{
+        width: 30%;
+    }
+}
+
+
+
+
+
+/* Footer */
 .footer{
     text-align: center;
     background-color: rgba(207, 207, 207, 0.801);
@@ -248,7 +282,6 @@ strong{
     margin-left: auto;
     margin-right: auto; 
 }
-
 
 
 .socialni .fa {
@@ -427,8 +460,12 @@ strong{
     .oteviraci img{
         height: 180px;
         width: 270px;
-        margin-top: 15px;
         border-radius: 25px;
+        margin: 15 auto 0 auto;
+    }
+
+    .tabulka{
+        margin: auto;
     }
 
     .obrazek1 img{
@@ -437,6 +474,8 @@ strong{
         border-radius: 25px 0px 25px 0px;
         margin:0px 5% 0px 0px;
     }
+
+    
     
     
 }
@@ -468,6 +507,10 @@ strong{
         border-radius: 25px 0px 0px 25px;
     }
 
+    
+}
+
+@media screen and (min-width:1310px){
     .oteviraci{
         display: flex;
         justify-content: center;
@@ -477,8 +520,67 @@ strong{
     }
 
     .oteviraci img{
-        width: 50%;
+        width: 100%;
         height: 50%;
         margin: auto 3%;
     }
+}
+
+/* Oprava věcí rozbitých ve firefoxu*/
+
+@supports (-moz-appearance:none) {
+    .pole{
+        background-color:rgba(255, 255, 255);
+    }
+
+    @media screen and (min-width:728px) {
+        .oteviraci img{
+            width: 120%;
+            height: 120%;
+            padding: 0;
+            margin: 0;
+        }
+    }
+
+    @media screen and (min-width:930px){
+        .pole{
+            width: 48%;
+            margin: 1%;
+            max-width: 648px;
+            max-height: 486px;
+        }
+        
+        .oteviraci{
+            justify-content: center;
+            display:inline;
+            margin: auto;
+        }
+        
+        .oteviraci img{
+            height: 60%;
+            width: 60%;
+            height: 180px;
+            width: 270px;
+            margin-top: 15px;
+            border-radius: 25px;
+        }
+
+    }
+
+    @media screen and (min-width:1310px){
+        .oteviraci{
+            display: flex;
+            justify-content: center;
+            margin: auto;
+            width: 100%;
+            height: 100%;
+        }
+    
+        .oteviraci img{
+            width: 100%;
+            height: 50%;
+            margin: auto 3%;
+        }
+    }
+    
 }
