--- a/styl.css
+++ b/styl.css
@@ -99,28 +99,23 @@ strong{
 }
 
 .hlavni_proklik li{
-    margin: 15px;
-    
-
+    margin: 10px;
 }
 
 .hlavni_proklik li a{
+    display: inline-block;
+    position: relative;
     font-size: 28px;
     font-weight: 700;
     color: black;
     text-decoration: none;
-    background-color: rgba(107, 179, 155, 0.699);
     border-radius: 25px;
-    padding: 5px 50px;
+    padding: 5px;
     display:block;
     margin: auto 10% auto 10%;
     transition: all .2s ease-in-out;
 }
 
-.hlavni_proklik li a:hover{
-    background-color: rgba(78, 226, 177, 0.699);
-
-}
 
 .kontent{
     background-color: rgba(207, 207, 207, 0.801);
@@ -765,6 +760,10 @@ strong{
         margin-top: auto;
         margin-bottom: auto;
     }
+
+    .obrazek1 img{
+        width: 40%;
+    }
    
 }
 
@@ -788,13 +787,6 @@ strong{
     }
 }
 
-
-@media screen and (min-width:700px) {
-    .obrazek1 img{
-        width: 40%;
-    }
-
-}
 
 @media screen and (min-width:770px){
     .oteviraci{
@@ -858,8 +850,22 @@ strong{
 }
 
 
+@media screen and (max-width:1170px){
+    .hlavni_proklik li a:hover{
 
-@media screen and (min-width:1045px) {
+        background-color: rgba(78, 226, 177, 0.699);
+    }
+
+    .hlavni_proklik li a{
+    background-color: rgba(107, 179, 155, 0.699);
+    padding: 5px 50px;
+}
+}
+
+
+
+/* 1045 */
+@media screen and (min-width:1170px) {
     .hlavni_proklik ul{
         padding: 10px;
     }
@@ -871,6 +877,29 @@ strong{
     .hlavni_proklik li a{
         display: inline;
         margin: 5px;
+    }
+
+    .hlavni_proklik li a::after{
+        content: '';
+        position: absolute;
+        width: 100%;
+        transform: scaleX(0);
+        height: 4px;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(0, 255, 170, 0.699);
+        transform-origin: bottom right;
+        transition: transform 0.25s ease-out;
+        border-radius: 15px;
+    }
+    
+    .hlavni_proklik li a:hover::after{
+        transform: scaleX(1);
+        transform-origin: bottom left;    
+    }
+
+    .hlavni_proklik{
+        background-color: rgba(87, 209, 168, 0.699);
     }
     
 }
@@ -885,6 +914,7 @@ strong{
 
     
 }
+
 
 @media screen and (min-width:1310px){
     .oteviraci{
@@ -959,4 +989,33 @@ strong{
         }
     }
     
+}
+
+
+
+.nabidka {
+    padding: 20px;
+    justify-content: center;
+}
+
+#nabidka h2 {
+    font-size: 24px;
+    color: #333;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table td {
+    padding: 10px 0;
+    border-bottom: 1px solid #eee;
+}
+
+table td.cena {
+    text-align: right;
 }
