--- a/styl.css
+++ b/styl.css
@@ -1108,27 +1108,42 @@ strong{
 
 .nabidka {
     padding: 20px;
-    justify-content: center;
+
+}
+
+#nabidka{
+    max-height: none;
 }
 
 #nabidka h2 {
     font-size: 24px;
     color: #333;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #b1b1b1;
     padding-bottom: 10px;
     margin-bottom: 20px;
 }
 
-table {
+#nabidka table {
     width: 100%;
     border-collapse: collapse;
 }
 
-table td {
+#nabidka table td {
     padding: 10px 0;
-    border-bottom: 1px solid #eee;
 }
 
-table td.cena {
+#nabidka table tr {
+    border-bottom: 1px solid #e2e2e2;
+}
+
+#nabidka table td:last-child {
+    float: right;
+}
+
+#nabidka table td:first-child {
+    float: left;
+}
+
+#nabidka table td.cena {
     text-align: right;
 }
